# cg-tutorial

./: .gitignore  README.md
elevation/: CMakeLists.txt  README.md  constant.cpp  cube.cpp  data.cpp  main.cpp  shader.cpp  transform.cpp
standard/: CMakeLists.txt  README.md  data.cpp  main.cpp  shader.cpp  texture.cpp
